lib/src/verovio_bindings.dart

// Generated by ffigen. Do not edit manually.
// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for Verovio FFI wrapper
class VerovioNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VerovioNativeBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VerovioNativeBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  VrvToolkitHandle vrv_ffi_create(
    ffi.Pointer<ffi.Char> resource_path,
  ) {
    return _vrv_ffi_create(
      resource_path,
    );
  }

  late final _vrv_ffi_createPtr = _lookup<
          ffi.NativeFunction<VrvToolkitHandle Function(ffi.Pointer<ffi.Char>)>>(
      'vrv_ffi_create');
  late final _vrv_ffi_create = _vrv_ffi_createPtr
      .asFunction<VrvToolkitHandle Function(ffi.Pointer<ffi.Char>)>();

  void vrv_ffi_destroy(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_destroy(
      handle,
    );
  }

  late final _vrv_ffi_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(VrvToolkitHandle)>>(
          'vrv_ffi_destroy');
  late final _vrv_ffi_destroy =
      _vrv_ffi_destroyPtr.asFunction<void Function(VrvToolkitHandle)>();

  bool vrv_ffi_set_resource_path(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> resource_path,
  ) {
    return _vrv_ffi_set_resource_path(
      handle,
      resource_path,
    );
  }

  late final _vrv_ffi_set_resource_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_set_resource_path');
  late final _vrv_ffi_set_resource_path = _vrv_ffi_set_resource_pathPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_set_options_json(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> options_json,
  ) {
    return _vrv_ffi_set_options_json(
      handle,
      options_json,
    );
  }

  late final _vrv_ffi_set_options_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_set_options_json');
  late final _vrv_ffi_set_options_json = _vrv_ffi_set_options_jsonPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_load_data(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> utf8_data,
  ) {
    return _vrv_ffi_load_data(
      handle,
      utf8_data,
    );
  }

  late final _vrv_ffi_load_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>>('vrv_ffi_load_data');
  late final _vrv_ffi_load_data = _vrv_ffi_load_dataPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_load_zip_data_base64(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> base64_data,
  ) {
    return _vrv_ffi_load_zip_data_base64(
      handle,
      base64_data,
    );
  }

  late final _vrv_ffi_load_zip_data_base64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_load_zip_data_base64');
  late final _vrv_ffi_load_zip_data_base64 = _vrv_ffi_load_zip_data_base64Ptr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  int vrv_ffi_get_page_count(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_page_count(
      handle,
    );
  }

  late final _vrv_ffi_get_page_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(VrvToolkitHandle)>>(
          'vrv_ffi_get_page_count');
  late final _vrv_ffi_get_page_count =
      _vrv_ffi_get_page_countPtr.asFunction<int Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_to_svg(
    VrvToolkitHandle handle,
    int page_no,
    bool xml_declaration,
  ) {
    return _vrv_ffi_render_to_svg(
      handle,
      page_no,
      xml_declaration,
    );
  }

  late final _vrv_ffi_render_to_svgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Int32, ffi.Bool)>>('vrv_ffi_render_to_svg');
  late final _vrv_ffi_render_to_svg = _vrv_ffi_render_to_svgPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(VrvToolkitHandle, int, bool)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_log(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_log(
      handle,
    );
  }

  late final _vrv_ffi_get_logPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_log');
  late final _vrv_ffi_get_log = _vrv_ffi_get_logPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_version(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_version(
      handle,
    );
  }

  late final _vrv_ffi_get_versionPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_version');
  late final _vrv_ffi_get_version = _vrv_ffi_get_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_to_midi(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_render_to_midi(
      handle,
    );
  }

  late final _vrv_ffi_render_to_midiPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_render_to_midi');
  late final _vrv_ffi_render_to_midi = _vrv_ffi_render_to_midiPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_to_pae(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_render_to_pae(
      handle,
    );
  }

  late final _vrv_ffi_render_to_paePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_render_to_pae');
  late final _vrv_ffi_render_to_pae = _vrv_ffi_render_to_paePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_to_timemap(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> json_options,
  ) {
    return _vrv_ffi_render_to_timemap(
      handle,
      json_options,
    );
  }

  late final _vrv_ffi_render_to_timemapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_render_to_timemap');
  late final _vrv_ffi_render_to_timemap =
      _vrv_ffi_render_to_timemapPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_render_to_expansion_map(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_render_to_expansion_map(
      handle,
    );
  }

  late final _vrv_ffi_render_to_expansion_mapPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_render_to_expansion_map');
  late final _vrv_ffi_render_to_expansion_map =
      _vrv_ffi_render_to_expansion_mapPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  int vrv_ffi_get_scale(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_scale(
      handle,
    );
  }

  late final _vrv_ffi_get_scalePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(VrvToolkitHandle)>>(
          'vrv_ffi_get_scale');
  late final _vrv_ffi_get_scale =
      _vrv_ffi_get_scalePtr.asFunction<int Function(VrvToolkitHandle)>();

  bool vrv_ffi_set_scale(
    VrvToolkitHandle handle,
    int scale,
  ) {
    return _vrv_ffi_set_scale(
      handle,
      scale,
    );
  }

  late final _vrv_ffi_set_scalePtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(VrvToolkitHandle, ffi.Int32)>>(
      'vrv_ffi_set_scale');
  late final _vrv_ffi_set_scale =
      _vrv_ffi_set_scalePtr.asFunction<bool Function(VrvToolkitHandle, int)>();

  int vrv_ffi_get_page_with_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_page_with_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_page_with_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_page_with_element');
  late final _vrv_ffi_get_page_with_element = _vrv_ffi_get_page_with_elementPtr
      .asFunction<int Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  int vrv_ffi_get_time_for_element(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> xml_id,
  ) {
    return _vrv_ffi_get_time_for_element(
      handle,
      xml_id,
    );
  }

  late final _vrv_ffi_get_time_for_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_get_time_for_element');
  late final _vrv_ffi_get_time_for_element = _vrv_ffi_get_time_for_elementPtr
      .asFunction<int Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_select(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> selection_json,
  ) {
    return _vrv_ffi_select(
      handle,
      selection_json,
    );
  }

  late final _vrv_ffi_selectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>>('vrv_ffi_select');
  late final _vrv_ffi_select = _vrv_ffi_selectPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_set_input_from(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> input_from,
  ) {
    return _vrv_ffi_set_input_from(
      handle,
      input_from,
    );
  }

  late final _vrv_ffi_set_input_fromPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_set_input_from');
  late final _vrv_ffi_set_input_from = _vrv_ffi_set_input_fromPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_set_output_to(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> output_to,
  ) {
    return _vrv_ffi_set_output_to(
      handle,
      output_to,
    );
  }

  late final _vrv_ffi_set_output_toPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(VrvToolkitHandle,
              ffi.Pointer<ffi.Char>)>>('vrv_ffi_set_output_to');
  late final _vrv_ffi_set_output_to = _vrv_ffi_set_output_toPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  bool vrv_ffi_edit(
    VrvToolkitHandle handle,
    ffi.Pointer<ffi.Char> editor_action,
  ) {
    return _vrv_ffi_edit(
      handle,
      editor_action,
    );
  }

  late final _vrv_ffi_editPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              VrvToolkitHandle, ffi.Pointer<ffi.Char>)>>('vrv_ffi_edit');
  late final _vrv_ffi_edit = _vrv_ffi_editPtr
      .asFunction<bool Function(VrvToolkitHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_available_options(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_available_options(
      handle,
    );
  }

  late final _vrv_ffi_get_available_optionsPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>>(
      'vrv_ffi_get_available_options');
  late final _vrv_ffi_get_available_options = _vrv_ffi_get_available_optionsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(VrvToolkitHandle)>();

  ffi.Pointer<ffi.Char> vrv_ffi_get_default_options(
    VrvToolkitHandle handle,
  ) {
    return _vrv_ffi_get_default_options(
      handle,
    );
  }
